crates/hird-parse/tests/snapshots/smoke__expr_match_trailing_comma.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = match x { A -> 1, }\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    MATCH_EXPR
      WHITESPACE " "
      MATCH_KW "match"
      WHITESPACE " "
      IDENT "x"
      WHITESPACE " "
      L_BRACE "{"
      MATCH_ARM
        CONSTRUCTOR_PAT
          WHITESPACE " "
          IDENT "A"
        WHITESPACE " "
        ARROW "->"
        WHITESPACE " "
        INT "1"
      COMMA ","
      WHITESPACE " "
      R_BRACE "}"
