crates/hird-parse/tests/snapshots/smoke__expr_match_wildcard.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = match x { _ -> 0 }\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    MATCH_EXPR
      WHITESPACE " "
      MATCH_KW "match"
      WHITESPACE " "
      IDENT "x"
      WHITESPACE " "
      L_BRACE "{"
      MATCH_ARM
        WILDCARD_PAT
          WHITESPACE " "
          IDENT "_"
        WHITESPACE " "
        ARROW "->"
        WHITESPACE " "
        INT "0"
      WHITESPACE " "
      R_BRACE "}"
