crates/hird-parse/tests/snapshots/smoke__expr_record.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = { x: 1, y: 2 }\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    RECORD_LIT
      WHITESPACE " "
      L_BRACE "{"
      RECORD_FIELD
        WHITESPACE " "
        IDENT "x"
        COLON ":"
        WHITESPACE " "
        INT "1"
      COMMA ","
      RECORD_FIELD
        WHITESPACE " "
        IDENT "y"
        COLON ":"
        WHITESPACE " "
        INT "2"
      WHITESPACE " "
      R_BRACE "}"
