crates/hird-parse/tests/snapshots/smoke__expr_record_empty.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = {}\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    RECORD_LIT
      WHITESPACE " "
      L_BRACE "{"
      R_BRACE "}"
