crates/hird-parse/tests/snapshots/smoke__expr_relational_chain_rejected.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = a == b == c\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    BIN_EXPR
      BIN_EXPR
        WHITESPACE " "
        IDENT "a"
        WHITESPACE " "
        EQ_EQ "=="
        WHITESPACE " "
        IDENT "b"
      WHITESPACE " "
      EQ_EQ "=="
      WHITESPACE " "
      IDENT "c"
---
P0005 16..18: non-associative operator cannot be chained; parenthesise
