crates/hird-parse/tests/snapshots/smoke__expr_relational_parenthesised_ok.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = (a == b) == c\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    BIN_EXPR
      PAREN_EXPR
        WHITESPACE " "
        L_PAREN "("
        BIN_EXPR
          IDENT "a"
          WHITESPACE " "
          EQ_EQ "=="
          WHITESPACE " "
          IDENT "b"
        R_PAREN ")"
      WHITESPACE " "
      EQ_EQ "=="
      WHITESPACE " "
      IDENT "c"
